<resources>
    <string name="app_name">INEXEO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="favorite_coin">Favorite Coin</string>
    <string name="profile">Profile</string>
    <string name="coin_details">Coin Details</string>
    <string name="coin_news">Coin News</string>
    <string name="about_the_app">About the app</string>
    <string name="coin_id">Coin ID:</string>
    <string name="coin_name">Coin name:</string>
    <string name="coin_symbol">Coin symbol:</string>
    <string name="coin_price_abs">Coin price absolute:</string>
    <string name="coin_price_usd">Coin price USD:</string>
    <string name="absolute_value">Absolute value:</string>
    <string name="usd_value">USD value:</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="register_now">Register now!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">register</string>
    <string name="log_out">Log out</string>
    <string name="news_title">News title</string>
    <string name="news_content">News content</string>
    <string name="news_banner_image">News banner image</string>
    <string name="published_at">Published at</string>
    <string name="author">Author</string>
    <string name="to_add_coins_to_your_personal_favorites_list_please_log_in">To add coins to your personal favorites list,\nplease log in.</string>
    <string name="about">Our cryptocurrency mobile application is a sleek and easy-to-use platform that allows you to store your favorite digital assets. With support for multiple cryptocurrencies, you can manage all of your investments in one place. The app features live market data and a secure wallet to store your assets. Whether you\'re a seasoned investor or new to the world of cryptocurrency, our app has something for everyone. In addition to its core features, you can view your asset holdings in real-time. We also offer an additional educational resource, articles, to help you deepen your understanding of cryptocurrency and make informed investment decisions. It\'s never been easier to build a diversified portfolio and manage your assets on the go.</string>
    <string name="share">Share</string>
    <string name="nodata">No data</string>
</resources>
