<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coin"
            type="com.bertvanhecke.cryptocurrencyapp.models.Coin" />

        <variable
            name="clickListener"
            type="com.bertvanhecke.cryptocurrencyapp.screens.favorite.CoinListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:onClick="@{() -> clickListener.onClick(coin)}">

        <TextView
            android:id="@+id/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/coin_name"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/coin_symbol"
            app:layout_constraintStart_toEndOf="@+id/coin_symbol"
            app:layout_constraintTop_toTopOf="@+id/coin_symbol"
            app:name="@{coin}" />

        <TextView
            android:id="@+id/coin_symbol"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/symbol_box"
            android:gravity="center"
            android:text="@string/coin_symbol"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:symbol="@{coin}" />

        <TextView
            android:id="@+id/coin_price_abs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/coin_price_abs"
            android:textColor="@color/white"
            app:absValue="@{coin}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coin_price_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/coin_price_usd"
            android:textColor="@color/white"
            app:USDValue="@{coin}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coin_price_abs" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>