<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="coin"
            type="com.bertvanhecke.cryptocurrencyapp.models.Coin" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <TextView
                android:id="@+id/coin_price_abs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/coin_price_abs"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:absValue="@{coin}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_price_usd_label" />

            <TextView
                android:id="@+id/coin_price_usd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/coin_price_usd"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:USDValue="@{coin}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/coin_volume_last_24_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="coin_volume_last_24_hours"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_price_abs_label"
                app:volumeLast24Hours="@{coin}" />

            <TextView
                android:id="@+id/coin_real_volume_last_24_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="coin_real_volume_last_24_hours"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_volume_last_24_hours"
                app:realVolumeLast24Hours="@{coin}" />


            <TextView
                android:id="@+id/percent_change_usd_last_1_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="percent_change_usd_last_1_hour"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_real_volume_last_24_hours"
                app:percentChangeUSDLast1Hour="@{coin}" />

            <TextView
                android:id="@+id/percent_change_btc_last_1_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="percent_change_btc_last_1_hour"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percent_change_usd_last_1_hour"
                app:percentChangeBTCLast1Hour="@{coin}" />


            <TextView
                android:id="@+id/percent_change_usd_last_24_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="percent_change_usd_last_24_hour"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percent_change_btc_last_1_hour"
                app:percentChangeUSDLast24Hour="@{coin}" />

            <TextView
                android:id="@+id/percent_change_btc_last_24_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="percent_change_btc_last_24_hour"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percent_change_usd_last_24_hour"
                app:percentChangeBTCLast24Hour="@{coin}" />

            <TextView
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="open"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percent_change_btc_last_24_hour"
                app:open="@{coin}" />

            <TextView
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="high"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:high="@{coin}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open" />

            <TextView
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="low"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/high"
                app:low="@{coin}" />

            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="close"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:close="@{coin}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/low" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="volume"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close"
                app:volume="@{coin}" />

            <ImageView
                android:id="@+id/favorite_coin_button"
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/coin_news_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_24" />

            <Button
                android:id="@+id/coin_news_button"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/coin_news"
                android:textColor="@color/black"
                app:backgroundTint="@color/yellow_crayola"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_price_usd" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>